--- a/Mobs.xcodeproj/xcshareddata/xcschemes/Mobs.xcscheme
+++ b/Mobs.xcodeproj/xcshareddata/xcschemes/Mobs.xcscheme
@@ -28,6 +28,19 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
       shouldAutocreateTestPlan = "YES">
+      <Testables>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "03E262292AC4A40000EA3E5E"
+               BuildableName = "MobsUITests.xctest"
+               BlueprintName = "MobsUITests"
+               ReferencedContainer = "container:Mobs.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+      </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
