--- a/.github/workflows/all.yml
+++ b/.github/workflows/all.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   all:
-    runs-on: macos-latest
+    runs-on: macos-13
     steps:
       - uses: actions/checkout@v3
       - name: Source code styling
