More info plist?

--- a/Moblin/Info.plist
+++ b/Moblin/Info.plist
@@ -17,6 +17,18 @@
 			</array>
 		</dict>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>Moblin live streams video from the camera.</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Moblin live streams audio from the microphone.</string>
+	<key>NSNetworkVolumesUsageDescription</key>
+	<string>Moblin shows selected images as overlays.</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Moblin shows selected images as overlays.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Moblin shows selected images as overlays.</string>
+	<key>NSLocalNetworkUsageDescription</key>
+	<string>Moblin uses localhost as input and output to SRT library.</string>
 	<key>ITSAppUsesNonExemptEncryption</key>
 	<false/>
 </dict>
