Try to use later Xcode in CI.

--- a/.github/workflows/all.yml
+++ b/.github/workflows/all.yml
@@ -9,6 +9,9 @@ jobs:
     runs-on: macos-13
     steps:
       - uses: actions/checkout@v3
+      - uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: latest-stable
       - name: Source code styling
         run: |
           make style-check
