--- a/Moblin.xcodeproj/xcshareddata/xcschemes/Moblin 16.xcscheme
+++ b/Moblin.xcodeproj/xcshareddata/xcschemes/Moblin 16.xcscheme
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "035E9E322A9A02D6009D4F5A"
-               BuildableName = "Moblin.app"
-               BlueprintName = "Moblin"
+               BlueprintIdentifier = "032E06392B2F3E9D00EAE5F8"
+               BuildableName = "Moblin 16.app"
+               BlueprintName = "Moblin 16"
                ReferencedContainer = "container:Moblin.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -30,7 +30,7 @@
       shouldAutocreateTestPlan = "YES">
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Release"
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
@@ -38,18 +38,7 @@
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
-      allowLocationSimulation = "YES"
-      viewDebuggingEnabled = "No">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "035E9E322A9A02D6009D4F5A"
-            BuildableName = "Moblin.app"
-            BlueprintName = "Moblin"
-            ReferencedContainer = "container:Moblin.xcodeproj">
-         </BuildableReference>
-      </BuildableProductRunnable>
+      allowLocationSimulation = "YES">
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -57,16 +46,15 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "035E9E322A9A02D6009D4F5A"
-            BuildableName = "Moblin.app"
-            BlueprintName = "Moblin"
+            BlueprintIdentifier = "032E06392B2F3E9D00EAE5F8"
+            BuildableName = "Moblin 16.app"
+            BlueprintName = "Moblin 16"
             ReferencedContainer = "container:Moblin.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
