--- a/Moblin/Info.plist
+++ b/Moblin/Info.plist
@@ -32,6 +32,8 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Moblin can display your location and/or speed on stream.</string>
 	<key>ITSAppUsesNonExemptEncryption</key>
 	<false/>
 </dict>
