--- a/.github/workflows/all.yml
+++ b/.github/workflows/all.yml
@@ -21,3 +21,4 @@ jobs:
       - name: Build
         run: |
           xcodebuild -scheme Moblin -skipPackagePluginValidation build CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
+          xcodebuild -scheme "Moblin Watch" -skipPackagePluginValidation build CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
