--- a/.github/workflows/all.yml
+++ b/.github/workflows/all.yml
@@ -21,4 +21,6 @@ jobs:
       - name: Build
         run: |
           xcodebuild -scheme Moblin -skipPackagePluginValidation build CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
+      - name: Build watch
+        run: |
           xcodebuild -scheme "Moblin Watch" -skipPackagePluginValidation build CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
