--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -2,3 +2,10 @@ disabled_rules:
   - function_parameter_count
   - type_name
   - large_tuple
+  - identifier_name
+  - file_length
+  - trailing_comma
+  - opening_brace
+  - type_body_length
+  - cyclomatic_complexity
+  - function_body_length
