Watch app continued.

--- a/Moblin.xcodeproj/xcshareddata/xcschemes/Moblin Watch.xcscheme
+++ b/Moblin.xcodeproj/xcshareddata/xcschemes/Moblin Watch.xcscheme
@@ -58,7 +58,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "03ECDF452B8E4E5E00BD920E"
-            BuildableName = "MoblinWatch.app"
+            BuildableName = "Moblin.app"
             BlueprintName = "MoblinWatch"
             ReferencedContainer = "container:Moblin.xcodeproj">
          </BuildableReference>
@@ -75,7 +75,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "03ECDF452B8E4E5E00BD920E"
-            BuildableName = "MoblinWatch.app"
+            BuildableName = "Moblin.app"
             BlueprintName = "MoblinWatch"
             ReferencedContainer = "container:Moblin.xcodeproj">
          </BuildableReference>
