--- a/Moblin.xcodeproj/xcshareddata/xcschemes/Moblin Watch.xcscheme
+++ b/Moblin.xcodeproj/xcshareddata/xcschemes/Moblin Watch.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "03ECDF452B8E4E5E00BD920E"
-               BuildableName = "MoblinWatch.app"
+               BuildableName = "Moblin.app"
                BlueprintName = "MoblinWatch"
                ReferencedContainer = "container:Moblin.xcodeproj">
             </BuildableReference>
@@ -52,7 +52,8 @@
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
-      allowLocationSimulation = "YES">
+      allowLocationSimulation = "YES"
+      notificationPayloadFile = "PushNotificationPayload.apns">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
          <BuildableReference
@@ -69,7 +70,8 @@
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
-      debugDocumentVersioning = "YES">
+      debugDocumentVersioning = "YES"
+      notificationPayloadFile = "PushNotificationPayload.apns">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
          <BuildableReference
