--- a/Moblin/Info.plist
+++ b/Moblin/Info.plist
@@ -36,5 +36,9 @@
 	<string>Moblin can display your location and/or speed on screen and stream.</string>
 	<key>ITSAppUsesNonExemptEncryption</key>
 	<false/>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>audio</string>
+	</array>
 </dict>
 </plist>
