--- a/Moblin/Moblin.entitlements
+++ b/Moblin/Moblin.entitlements
@@ -4,6 +4,8 @@
 <dict>
 	<key>com.apple.developer.networking.wifi-info</key>
 	<true/>
+	<key>com.apple.developer.weatherkit</key>
+	<true/>
 	<key>com.apple.external-accessory.wireless-configuration</key>
 	<true/>
 	<key>com.apple.security.application-groups</key>
