Enable reaction effects.

--- a/Moblin/Info.plist
+++ b/Moblin/Info.plist
@@ -26,6 +26,8 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>NSCameraReactionEffectsEnabled</key>
+	<true/>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>audio</string>
