--- a/Moblin Watch/Info.plist
+++ b/Moblin Watch/Info.plist
@@ -5,6 +5,8 @@
 	<key>UIBackgroundModes</key>
 	<array/>
 	<key>WKBackgroundModes</key>
-	<array/>
+	<array>
+		<string>workout-processing</string>
+	</array>
 </dict>
 </plist>
