--- a/.github/workflows/all.yml
+++ b/.github/workflows/all.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   all:
-    runs-on: macos-13
+    runs-on: macos-latest
     steps:
       - uses: actions/checkout@v3
       - uses: maxim-lobanov/setup-xcode@v1
