--- a/Moblin/Moblin.entitlements
+++ b/Moblin/Moblin.entitlements
@@ -8,6 +8,8 @@
 	<array/>
 	<key>com.apple.developer.networking.wifi-info</key>
 	<true/>
+	<key>com.apple.developer.siri</key>
+	<true/>
 	<key>com.apple.developer.weatherkit</key>
 	<true/>
 	<key>com.apple.external-accessory.wireless-configuration</key>
