--- a/Moblin/Info.plist
+++ b/Moblin/Info.plist
@@ -31,6 +31,8 @@
 		<string>IntentIntent</string>
 		<string>MuteIntent</string>
 	</array>
+	<key>UISupportsDocumentBrowser</key>
+	<true/>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>audio</string>
