--- a/Moblin/Moblin.entitlements
+++ b/Moblin/Moblin.entitlements
@@ -16,7 +16,7 @@
 	<true/>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.com.eerimoq.Moblin</string>
+		<string>group.com.subside.Moblin</string>
 	</array>
 </dict>
 </plist>
